<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"


        android:contentDescription="@string/desc"
        android:visibility="visible"
        app:srcCompat="@drawable/scdb"
         />

    <Button
        android:id="@+id/button1"

        android:layout_width="300dp"
        android:layout_height="80dp"


        android:layout_margin="5dp"
        android:text="@string/aboutus"
        android:background="@drawable/button_shape"
        android:textColor="@color/Black" />


    <Button
        android:id="@+id/button2"

        android:layout_width="300dp"
        android:layout_margin="5dp"
        android:layout_height="80dp"


        android:background="@drawable/button_shape"
        android:text="@string/ourservices"
        android:textColor="@color/Black" />

    <Button
        android:id="@+id/button3"

        android:layout_width="300dp"
        android:layout_margin="5dp"
        android:layout_height="80dp"


        android:background="@drawable/button_shape"
        android:text="@string/contactus"
        android:textColor="@color/Black" />
    <Button
        android:id="@+id/button4"

        android:layout_width="300dp"
        android:layout_margin="5dp"
        android:layout_height="80dp"


        android:background="@drawable/button_shape"
        android:text="@string/findus"
        android:textColor="@color/Black" />
</LinearLayout>


</ScrollView>