<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".OurServises">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <Button
        android:id="@+id/buttons1"

        android:layout_width="300dp"
        android:layout_height="80dp"

        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/CV"
        android:textColor="@color/Black" />

    <Button
        android:id="@+id/buttons2"
        android:layout_width="300dp"
        android:layout_height="80dp"



        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/dailyEng"
        android:textColor="@color/Black" />

    <Button
        android:id="@+id/buttons3"
        android:layout_width="300dp"
        android:layout_height="80dp"


        android:layout_margin="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_shape"
        android:text="@string/Onlinecourses"
        android:textColor="@color/Black" />

    <Button
        android:id="@+id/buttons4"
        android:layout_width="300dp"
        android:layout_height="80dp"


        android:layout_margin="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_shape"
        android:text="@string/ELibrary"
        android:textColor="@color/Black" />

    <Button
        android:id="@+id/buttons5"
        android:layout_width="300dp"
        android:layout_height="80dp"


        android:layout_margin="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_shape"
        android:text="@string/ModelTest"
        android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttons6"
            android:layout_width="300dp"
            android:layout_height="80dp"



            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/button_shape"
            android:layout_margin="10dp"
            android:text="@string/Blog"
            android:textColor="@color/Black" />
    </LinearLayout>
</ScrollView>