<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ContactUs">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:contentDescription="@string/desc"
        android:visibility="visible"
        app:srcCompat="@drawable/scdb" />


    <TextView
        android:id="@+id/editText2"
        android:layout_width="311dp"
        android:layout_height="52dp"

        android:layout_marginTop="221dp"
        android:ems="10"

        android:text="@string/email"
        android:textColor="@color/Black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="311dp"
        android:layout_height="52dp"


        android:ems="10"

        android:text="@string/contact"
        android:textColor="@color/Black"
        android:textSize="25sp" />


    <Button
        android:id="@+id/button1"

        android:layout_width="300dp"
        android:layout_height="80dp"

        android:layout_marginBottom="31dp"
        android:background="@drawable/button_shape"
        android:text="@string/help"
        android:textColor="@color/Black" />
    </LinearLayout>
</ScrollView>